src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>AssetsAccountNumber__c</fullName>
        <label>AssetsAccountNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetsCompleteFlag__c</fullName>
        <label>AssetsCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetsInstitutionAddress__c</fullName>
        <label>AssetsInstitutionAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AssetsInstitutionName__c</fullName>
        <label>AssetsInstitutionName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AssetsMarketValue__c</fullName>
        <label>AssetsMarketValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetsPresentMarketValue__c</fullName>
        <label>AssetsPresentMarketValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetsPropertyAddress__c</fullName>
        <label>AssetsPropertyAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AssetsTotalAssets__c</fullName>
        <label>AssetsTotalAssets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientBorrowerName__c</fullName>
        <label>ClientBorrowerName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCity__c</fullName>
        <label>ClientCity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientCompleteFlag__c</fullName>
        <label>ClientCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientDOB__c</fullName>
        <label>ClientDOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientIName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ClientIName</label>
        <referenceTo>ClientInfo__c</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientMailingAddress1__c</fullName>
        <label>ClientMailingAddress1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientMailingAddress2__c</fullName>
        <label>ClientMailingAddress2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientMaritalStatus__c</fullName>
        <label>ClientMaritalStatus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNBRDOB__c</fullName>
        <label>ClientNBRDOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientNBRName__c</fullName>
        <label>ClientNBRName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNBRPhone__c</fullName>
        <label>ClientNBRPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ClientNBRRelationship__c</fullName>
        <label>ClientNBRRelationship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNBR__c</fullName>
        <defaultValue>'true'</defaultValue>
        <label>ClientNBR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNBSDOB__c</fullName>
        <label>ClientNBSDOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientNBSName__c</fullName>
        <label>ClientNBSName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNBSPhone__c</fullName>
        <label>ClientNBSPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ClientNBSRelationship__c</fullName>
        <label>ClientNBSRelationship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNBS__c</fullName>
        <defaultValue>'true'</defaultValue>
        <label>ClientNBS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientPresentAddressYears__c</fullName>
        <label>ClientPresentAddressYears</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientSSN__c</fullName>
        <label>ClientSSN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientState__c</fullName>
        <label>ClientState</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientZip__c</fullName>
        <label>ClientZip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreditCompleteFlag__c</fullName>
        <label>CreditCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditPullNewChild__c</fullName>
        <label>CreditPullNewChild</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditPullNew__c</fullName>
        <defaultValue>'true'</defaultValue>
        <label>CreditPullNew</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditReferenceNumberConfirm__c</fullName>
        <label>CreditReferenceNumberConfirm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditReferenceNumber__c</fullName>
        <label>CreditReferenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditReissue__c</fullName>
        <defaultValue>'true'</defaultValue>
        <label>CreditReissue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecBankrupt__c</fullName>
        <label>DecBankrupt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecCoMaker__c</fullName>
        <label>DecCoMaker</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecCompleteFlag__c</fullName>
        <label>DecCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecDefaultFederalDebt__c</fullName>
        <label>DecDefaultFederalDebt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecDownPaymentBorrowed__c</fullName>
        <label>DecDownPaymentBorrowed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecEthenicity__c</fullName>
        <label>DecEthenicity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecFHAInsuranceLoan__c</fullName>
        <label>DecFHAInsuranceLoan</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecIntendToOccupy__c</fullName>
        <label>DecIntendToOccupy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecLawsuit__c</fullName>
        <label>DecLawsuit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecObligatedLoan__c</fullName>
        <label>DecObligatedLoan</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecObligatedPayAlimony__c</fullName>
        <label>DecObligatedPayAlimony</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecOutstandingJudgement__c</fullName>
        <label>DecOutstandingJudgement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecPropertyForClose__c</fullName>
        <label>DecPropertyForClose</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecRace__c</fullName>
        <label>DecRace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DecReverseMortgage__c</fullName>
        <label>DecReverseMortgage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecSex__c</fullName>
        <label>DecSex</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecUSCitizen__c</fullName>
        <label>DecUSCitizen</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentAddress1__c</fullName>
        <label>EmploymentAddress1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmploymentAddress2__c</fullName>
        <label>EmploymentAddress2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmploymentBusinessPhone__c</fullName>
        <label>EmploymentBusinessPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EmploymentCity__c</fullName>
        <label>EmploymentCity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmploymentCompleteFlag__c</fullName>
        <label>EmploymentCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentEndDate__c</fullName>
        <label>EmploymentEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmploymentName__c</fullName>
        <label>EmploymentName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentSelfEmployed__c</fullName>
        <label>EmploymentSelfEmployed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentStartDate__c</fullName>
        <label>EmploymentStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmploymentState__c</fullName>
        <label>EmploymentState</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmploymentZip__c</fullName>
        <label>EmploymentZip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinalCompleteFlag__c</fullName>
        <label>FinalCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncomeCompleteFlag__c</fullName>
        <label>IncomeCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncomeDescribeOther__c</fullName>
        <label>IncomeDescribeOther</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IncomeGrossMonthly__c</fullName>
        <label>IncomeGrossMonthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncomeGrossRental__c</fullName>
        <label>IncomeGrossRental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncomeMonthly__c</fullName>
        <label>IncomeMonthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncomeNetRental__c</fullName>
        <label>IncomeNetRental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsActiveFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActiveFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiabilitiesAlimony__c</fullName>
        <label>LiabilitiesAlimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesCombinedMonthlyDebts__c</fullName>
        <label>LiabilitiesCombinedMonthlyDebts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesCompleteFlag__c</fullName>
        <label>LiabilitiesCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiabilitiesJobRelated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LiabilitiesJobRelated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesMortgagePayment__c</fullName>
        <label>LiabilitiesMortgagePayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesMortgage__c</fullName>
        <label>LiabilitiesMortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesTaxes__c</fullName>
        <label>LiabilitiesTaxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoanAlternateContactAddress__c</fullName>
        <label>LoanAlternateContactAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanAlternateContactName__c</fullName>
        <label>LoanAlternateContactName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanAlternateContactPhone__c</fullName>
        <label>LoanAlternateContactPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LoanApplicationTakenBy__c</fullName>
        <label>LoanApplicationTakenBy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanChildrenbelow6__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LoanChildrenbelow6</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoanCompleteFlag__c</fullName>
        <label>LoanCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanDetailsCompleteFlag__c</fullName>
        <label>LoanDetailsCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanDetailsContact__c</fullName>
        <label>LoanDetailsContact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LoanDetailsPayPartner__c</fullName>
        <label>LoanDetailsPayPartner</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanDetailsTitleCompany__c</fullName>
        <label>LoanDetailsTitleCompany</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanDetailsTitleSource__c</fullName>
        <defaultValue>'true'</defaultValue>
        <label>LoanDetailsTitleSource</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanEstimateAppraisedValue__c</fullName>
        <label>LoanEstimateAppraisedValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanHouseHoldMembers__c</fullName>
        <label>LoanHouseHoldMembers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanInterviewDate__c</fullName>
        <label>LoanInterviewDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoanMortgageAppliedFor__c</fullName>
        <label>LoanMortgageAppliedFor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanOriginationFee__c</fullName>
        <label>LoanOriginationFee</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanOriginatorCompanyAddress__c</fullName>
        <label>LoanOriginatorCompanyAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanOriginatorCompanyIdentifier__c</fullName>
        <label>LoanOriginatorCompanyIdentifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanOriginatorCompanyName__c</fullName>
        <label>LoanOriginatorCompanyName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanOriginatorIdentifier__c</fullName>
        <label>LoanOriginatorIdentifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanOriginatorName__c</fullName>
        <label>LoanOriginatorName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanOriginatorPhone__c</fullName>
        <label>LoanOriginatorPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LoanPOA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LoanPOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoanPurpose__c</fullName>
        <label>LoanPurpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LoanSquareFoot__c</fullName>
        <label>LoanSquareFoot</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <label>Loan Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Loan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                    <default>true</default>
                    <label>Proposal</label>
                </value>
                <value>
                    <fullName>Waiting for Full Package</fullName>
                </value>
                <value>
                    <fullName>Application Package Received</fullName>
                </value>
                <value>
                    <fullName>In Processing</fullName>
                </value>
                <value>
                    <fullName>Conditionally Approved</fullName>
                </value>
                <value>
                    <fullName>Underwriting Clear to Close</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Awaiting Closing</fullName>
                </value>
                <value>
                    <fullName>Closed - Awaiting Funding</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Cancelled/Denied</fullName>
                </value>
                <value>
                    <fullName>In Underwriting</fullName>
                    <isActive>false</isActive>
                    <label>In Underwriting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlineBrokerCompensation__c</fullName>
        <label>Broker Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlineCashAvaliabletoClient__c</fullName>
        <label>Cash Avaliable to Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlineCashDueforClosing__c</fullName>
        <label>Cash Due for Closing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlineFinancialAssessmentResult__c</fullName>
        <label>Financial Assessment Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlineMonthlyPaymentavailabletoClient__c</fullName>
        <label>Monthly Payment available to Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlinePropertyAppraisalValue__c</fullName>
        <label>Property Appraisal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlineTotalLESA__c</fullName>
        <label>Total LESA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubjectCheckHeldAs__c</fullName>
        <label>SubjectCheckHeldAs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubjectCompleteFlag__c</fullName>
        <label>SubjectCompleteFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyAddress__c</fullName>
        <label>SubjectPropertyAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyDescription__c</fullName>
        <label>SubjectPropertyDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyHazardInsurance__c</fullName>
        <label>SubjectPropertyHazardInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyHeldAs__c</fullName>
        <label>SubjectPropertyHeldAs</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyHeldNames__c</fullName>
        <label>SubjectPropertyHeldNames</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyHomeOwnerFee__c</fullName>
        <label>SubjectPropertyHomeOwnerFee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyNoOfProperty__c</fullName>
        <label>SubjectPropertyNoOfProperty</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyRealEstateTax__c</fullName>
        <label>SubjectPropertyRealEstateTax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyResidenceType__c</fullName>
        <label>SubjectPropertyResidenceType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectPropertyYearBuilt__c</fullName>
        <label>SubjectPropertyYearBuilt</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>OldLoan</label>
    <nameField>
        <displayFormat>Loan_{000000}</displayFormat>
        <label>Loan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OldLoans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Loans</fullName>
        <columns>NAME</columns>
        <columns>ClientIName__c</columns>
        <columns>Loan_Number__c</columns>
        <columns>LoanPurpose__c</columns>
        <columns>Loan_Status__c</columns>
        <columns>LoanOriginatorName__c</columns>
        <columns>LoanOriginatorPhone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Loans</label>
    </listViews>
</CustomObject>